Respond: Fix Context Hub Display Issues (#1467)
Issue before fix:
* When the context hub tooltip appears and contains longer words in one
of the tooltip tabs (e.g., the string UNKNOWN), the word gets cut off.
* If the entity name has any letters with descenders (e.g., ‘g’ or
‘y’), these descender can be cut off.

What changed:
* Added text-overflow: ellipsis so that instead of showing cut off
words (e.g., UNKNOW), we show it with an ellipsis (e.g., UNKN…). Also
added a title attribute so that if the user hovers over the word, it
will be displayed via the browser text popup)
* Added additional line height to the entity name header so that
descender letters don’t get cut off

Issue: ASOC-38229

Adjusted Endpoint/LiveConnect font-size in CH Tooltip

Issue before fix:
* Although I had set an ellipsis on the text in case it overflows, UX
requested smaller text.

What changed:
* I’ve kept the ellipsis, since there may be scenarios where the text
is too long for even smaller font-size to handle, but I’ve also added
the record.name as a class name, and then targeted both Machines and
LiveConnect values to be 100% font-size, which will display a value
like UNKNOWN in its entirety.

--- a/context/app/styles/context/_context-tooltip.scss
+++ b/context/app/styles/context/_context-tooltip.scss
@@ -12,6 +12,7 @@ $contextTooltipDatumPadding: 0px;
     overflow: hidden;
     text-overflow: ellipsis;
     margin-right: rsa-whitespace(more);
+    line-height: 1.35;
   }
 
   &__body {
@@ -92,6 +93,13 @@ $contextTooltipDatumPadding: 0px;
     .value {
       @include rsa-font(base, large, uppercase);
       color: rsa-color(white);
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    &.Machines .value, &.LiveConnect .value {
+      font-size: 100%;
+      line-height: 1.75rem;
     }
 
     .text {
